--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -43,7 +43,10 @@ RUN addgroup -S trydjango && adduser -S trydjango -G trydjango
 ENV HOME=/home/trydjango
 ENV APP_HOME=/home/trydjango/web
 RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles-cdn
 WORKDIR $APP_HOME
+
+EXPOSE 8000
 
 # install dependencies
 RUN apk update && apk add libpq
