--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,10 +6,10 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     command: gunicorn trydjango.wsgi:application --bind 0.0.0.0:8000
-    ports:
-      - 8000:8000
     env_file:
       - .env.prod
+    volumes:
+      - static_volume:/home/trydjango/web/staticfiles-cdn
     depends_on:
       - db
   db:
@@ -18,6 +18,15 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - .env.prod.db
+  nginx:
+    build: ./nginx
+    ports:
+      - 1337:80
+    volumes:
+      - static_volume:/home/trydjango/web/staticfiles-cdn
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
+  static_volume:
