--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -44,6 +44,7 @@ ENV HOME=/home/trydjango
 ENV APP_HOME=/home/trydjango/web
 RUN mkdir $APP_HOME
 RUN mkdir $APP_HOME/staticfiles-cdn
+RUN mkdir $APP_HOME/mediafiles-cdn
 WORKDIR $APP_HOME
 
 EXPOSE 8000
